# uhpm-core

./: CONTRIBUTION.md  Cargo.toml  README.md  all_source_code.txt
src/: errors.rs  lib.rs  paths.rs
src/application/: package_manager.rs
src/entities/: installation.rs  mod.rs  package.rs
src/factories/: installation_factory.rs  mod.rs  package_factory.rs
src/models/: config.rs  dependency.rs  events.rs  file_metadata.rs  file_system.rs  mod.rs  operations.rs  package.rs  repository.rs  symlink.rs  target.rs
src/ports/: cache_manager.rs  dependency_resolver.rs  event_publisher.rs  file_system.rs  mod.rs  network.rs  package_manager.rs  package_repository.rs
src/repositories/: database.rs  local_packages.rs  mod.rs  package_files.rs  remote_packages.rs
src/services/: mod.rs  package_service.rs
