[package]
name = "uhpm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
md5 = "0.8.0"
reqwest = { version = "0.12.24", features = ["json"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
